# lofi_rs

./: Cargo.toml  Makefile
.github/workflows/: opencode.yml
src/: main.rs  player.rs  ui.rs
