[package]
name = "lofi_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
nix = { version = "0.28", features = ["process", "signal"] }
ratatui = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
